# redis-http-worker

./: .dockerignore  Dockerfile  README.md  build.sh  dlq.go  dlq.py  go.Dockerfile  go.mod  go.sum  gosum.sh  main.go  main.py  metrics.go  metrics.py  pyproject.toml  scheduler_loop.py  utils.py  worker.py  worker_consumer.py
test/: Dockerfile  docker-compose-go.yml  docker-compose.yml  pyproject.toml  test_event_generator.py  test_http_server.py
